--- a/app/build.gradle
+++ b/app/build.gradle
@@ -178,6 +178,14 @@ android {
     }
   }
   // endregion
+
+  testOptions.unitTests.all {
+    testLogging {
+      events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+      outputs.upToDateWhen { false }
+      showStandardStreams = true
+    }
+  }
 }
 
 kapt {
