--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/PicasaGallery">
+      android:theme="@style/Picasa">
 
     <activity
         android:name="io.shtanko.picasagallery.view.launch.LaunchActivity"
